$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-21 [B] Fixed a critical error with the most viewed meta album {Nibbler}
2010-06-21 [O] Updated French language file (improvement and corrections){Frantz}
2010-06-21 [B] Allow higher port numbers for the site url config setting {Nibbler}
2010-06-18 [B] Fixed display of swf files in Firefox (thread ID 63624) {eenemeenemuu}
2010-06-17 [B] Fixed resizing of watermark backup images (thread ID 65531) {eenemeenemuu}
2010-06-17 [B] Fixed category permissions for secondary user groups (thread ID 65551) {eenemeenemuu}
2010-06-17 [B] Fixed issue when editing user albums (thread ID 65542) {eenemeenemuu}
2010-06-17 [B] Fixed issues with usergal_alphatabs plugin (thread ID 65473 & 65547) {eenemeenemuu}
2010-06-16 [C] Fixed line breaks in contact form emails {eenemeenemuu}
2010-06-15 [D] Removed outdated FAQ items {GauGau}
2010-06-12 [O] Updated Hungarian language file (user contribution) {eenemeenemuu}
2010-06-11 [B] Fixed pre-population of user name on comments form (thread ID 65293) {eenemeenemuu}
2010-06-11 [B] Fixed timeout issue when fetching remote files (thread ID 65424) {eenemeenemuu}
2010-06-11 [B] Fixed thumb sharpening (thread ID 65398) {eenemeenemuu}
2010-06-11 [A] Place new comments form accordingly to sort order of comments (thread ID 65461) {eenemeenemuu}
2010-06-10 [A] Added Danish language file (user contribution) {eenemeenemuu}
2010-06-10 [B] Added default value for 'user_profile6' during user creation (thread ID 65451) {eenemeenemuu}
2010-06-10 [B] Fixed HTML validation issue for german lang files - replaced & by &amp; {Timo}